Fix collapsed navigation CSS

--- a/site/assets/css/site.scss
+++ b/site/assets/css/site.scss
@@ -21,9 +21,6 @@ hr {
 
 .navbar-inverse {
   border: none;
-  position: fixed;
-  top: 0;
-  height: 50px;
 
   .navbar-brand {
     color: #e9e9e9;
